Inserindo dockerfile e docker-compose para ambiente

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=172.17.0.2;port=3306;database=projetotgdb;uid=root;password=1234" 
+    "DefaultConnection": "server=db;port=3306;database=projetotgdb;uid=projetotg;password=projetotg#123" 
   },
   "Logging": {
     "LogLevel": {
