--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,11 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Azure for Students(2464bc64-f50b-44f1-a440-f7572a5fb025)'
+    appType: 'webApp'
+    WebAppName: 'projetotgsgc'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+
